@@ -2,6 +2,5 @@
 
 set -e
 
-cp -av /usr/share/gettext/gettext.h src/
 autoreconf -if
 ./configure
