@@ -1,3 +1,10 @@
+2010-10-03  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
+
+	* autogen.sh,
+	configure.ac,
+	src/Makefile.am,
+	src/betaradio.c: Polish gettext usage.
+
 2010-09-27  Shih-Yuan Lee (FourDollars) <fourdollars@gmail.com>
 
 	* autogen.sh: Install copies instead of symbolic links to avoid pbuilder
